Illegal hex characters in escape problem solved and logger added

--- a/sandbox/urlSearcherConf.properties
+++ b/sandbox/urlSearcherConf.properties
@@ -3,8 +3,8 @@
 # ============================================
 
 # if you are behind a proxy you have to set the IP address and the port number of the proxy
-#PROXY_HOST=proxy.istat.it
-#PROXY_PORT=3128
+PROXY_HOST=proxy.istat.it
+PROXY_PORT=3128
 
 # ============================================
 # paths
@@ -19,3 +19,6 @@ TXT_FILES_FOLDER_PATH=/home/summa/workspace/UrlSearcher/sandbox/txtFiles
 
 # the path of the folder within which the produced seed file will be created
 SEED_FILE_FOLDER_PATH=/home/summa/workspace/UrlSearcher/sandbox
+
+# the fullpath of the log file that will be created
+LOG_FILE_PATH = /home/summa/workspace/UrlSearcher/sandbox/logUrlSearcher.log
